Унификация ендпоинта для удаление книги и ее страниц
