# openapi/serverapi/oas_router_gen.go
@@ -752,96 +752,24 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 						}
 
 						elem = origElem
-					case 'l': // Prefix: "lete-"
+					case 'l': // Prefix: "lete-all-pages-by-hash"
 						origElem := elem
-						if l := len("lete-"); len(elem) >= l && elem[0:l] == "lete-" {
+						if l := len("lete-all-pages-by-hash"); len(elem) >= l && elem[0:l] == "lete-all-pages-by-hash" {
 							elem = elem[l:]
 						} else {
 							break
 						}
 
 						if len(elem) == 0 {
-							break
-						}
-						switch elem[0] {
-						case 'a': // Prefix: "all-pages-by-"
-							origElem := elem
-							if l := len("all-pages-by-"); len(elem) >= l && elem[0:l] == "all-pages-by-" {
-								elem = elem[l:]
-							} else {
-								break
+							// Leaf node.
+							switch r.Method {
+							case "POST":
+								s.handleAPIDeduplicateDeleteAllPagesByHashPostRequest([0]string{}, elemIsEscaped, w, r)
+							default:
+								s.notAllowed(w, r, "POST")
 							}
 
-							if len(elem) == 0 {
-								break
-							}
-							switch elem[0] {
-							case 'b': // Prefix: "book"
-								origElem := elem
-								if l := len("book"); len(elem) >= l && elem[0:l] == "book" {
-									elem = elem[l:]
-								} else {
-									break
-								}
-
-								if len(elem) == 0 {
-									// Leaf node.
-									switch r.Method {
-									case "POST":
-										s.handleAPIDeduplicateDeleteAllPagesByBookPostRequest([0]string{}, elemIsEscaped, w, r)
-									default:
-										s.notAllowed(w, r, "POST")
-									}
-
-									return
-								}
-
-								elem = origElem
-							case 'h': // Prefix: "hash"
-								origElem := elem
-								if l := len("hash"); len(elem) >= l && elem[0:l] == "hash" {
-									elem = elem[l:]
-								} else {
-									break
-								}
-
-								if len(elem) == 0 {
-									// Leaf node.
-									switch r.Method {
-									case "POST":
-										s.handleAPIDeduplicateDeleteAllPagesByHashPostRequest([0]string{}, elemIsEscaped, w, r)
-									default:
-										s.notAllowed(w, r, "POST")
-									}
-
-									return
-								}
-
-								elem = origElem
-							}
-
-							elem = origElem
-						case 'b': // Prefix: "book-dead-hashed-pages"
-							origElem := elem
-							if l := len("book-dead-hashed-pages"); len(elem) >= l && elem[0:l] == "book-dead-hashed-pages" {
-								elem = elem[l:]
-							} else {
-								break
-							}
-
-							if len(elem) == 0 {
-								// Leaf node.
-								switch r.Method {
-								case "POST":
-									s.handleAPIDeduplicateDeleteBookDeadHashedPagesPostRequest([0]string{}, elemIsEscaped, w, r)
-								default:
-									s.notAllowed(w, r, "POST")
-								}
-
-								return
-							}
-
-							elem = origElem
+							return
 						}
 
 						elem = origElem
@@ -2260,7 +2188,7 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 							switch method {
 							case "POST":
 								r.name = APIBookDeletePostOperation
-								r.summary = "Удаление книги"
+								r.summary = "Удаляет книгу и/или ее страницы"
 								r.operationID = ""
 								r.pathPattern = "/api/book/delete"
 								r.args = args
@@ -2622,108 +2550,28 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 						}
 
 						elem = origElem
-					case 'l': // Prefix: "lete-"
+					case 'l': // Prefix: "lete-all-pages-by-hash"
 						origElem := elem
-						if l := len("lete-"); len(elem) >= l && elem[0:l] == "lete-" {
+						if l := len("lete-all-pages-by-hash"); len(elem) >= l && elem[0:l] == "lete-all-pages-by-hash" {
 							elem = elem[l:]
 						} else {
 							break
 						}
 
 						if len(elem) == 0 {
-							break
-						}
-						switch elem[0] {
-						case 'a': // Prefix: "all-pages-by-"
-							origElem := elem
-							if l := len("all-pages-by-"); len(elem) >= l && elem[0:l] == "all-pages-by-" {
-								elem = elem[l:]
-							} else {
-								break
+							// Leaf node.
+							switch method {
+							case "POST":
+								r.name = APIDeduplicateDeleteAllPagesByHashPostOperation
+								r.summary = "Удаляет страницы из книг"
+								r.operationID = ""
+								r.pathPattern = "/api/deduplicate/delete-all-pages-by-hash"
+								r.args = args
+								r.count = 0
+								return r, true
+							default:
+								return
 							}
-
-							if len(elem) == 0 {
-								break
-							}
-							switch elem[0] {
-							case 'b': // Prefix: "book"
-								origElem := elem
-								if l := len("book"); len(elem) >= l && elem[0:l] == "book" {
-									elem = elem[l:]
-								} else {
-									break
-								}
-
-								if len(elem) == 0 {
-									// Leaf node.
-									switch method {
-									case "POST":
-										r.name = APIDeduplicateDeleteAllPagesByBookPostOperation
-										r.summary = "Удаляет все страницы из книги и их дубликаты в системе"
-										r.operationID = ""
-										r.pathPattern = "/api/deduplicate/delete-all-pages-by-book"
-										r.args = args
-										r.count = 0
-										return r, true
-									default:
-										return
-									}
-								}
-
-								elem = origElem
-							case 'h': // Prefix: "hash"
-								origElem := elem
-								if l := len("hash"); len(elem) >= l && elem[0:l] == "hash" {
-									elem = elem[l:]
-								} else {
-									break
-								}
-
-								if len(elem) == 0 {
-									// Leaf node.
-									switch method {
-									case "POST":
-										r.name = APIDeduplicateDeleteAllPagesByHashPostOperation
-										r.summary = "Удаляет страницы из книг"
-										r.operationID = ""
-										r.pathPattern = "/api/deduplicate/delete-all-pages-by-hash"
-										r.args = args
-										r.count = 0
-										return r, true
-									default:
-										return
-									}
-								}
-
-								elem = origElem
-							}
-
-							elem = origElem
-						case 'b': // Prefix: "book-dead-hashed-pages"
-							origElem := elem
-							if l := len("book-dead-hashed-pages"); len(elem) >= l && elem[0:l] == "book-dead-hashed-pages" {
-								elem = elem[l:]
-							} else {
-								break
-							}
-
-							if len(elem) == 0 {
-								// Leaf node.
-								switch method {
-								case "POST":
-									r.name = APIDeduplicateDeleteBookDeadHashedPagesPostOperation
-									r.summary = "Удаляет из книги страницы с мертвыми хешами"
-									r.operationID = ""
-									r.pathPattern = "/api/deduplicate/delete-book-dead-hashed-pages"
-									r.args = args
-									r.count = 0
-									return r, true
-								default:
-									return
-								}
-							}
-
-							elem = origElem
 						}
 
 						elem = origElem
